--- a/frontend_assignment/package.json
+++ b/frontend_assignment/package.json
@@ -17,13 +17,20 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@emotion/react": "^11.9.3",
+        "@emotion/styled": "^11.9.3",
+        "@hookform/resolvers": "^2.9.7",
         "@metamask/detect-provider": "^1.2.0",
+        "@mui/material": "^5.9.2",
         "@zk-kit/identity": "^1.4.1",
         "@zk-kit/protocols": "^1.11.0",
         "assert": "^2.0.0",
         "next": "12.0.10",
         "react": "17.0.2",
-        "react-dom": "17.0.2"
+        "react-dom": "17.0.2",
+        "react-hook-form": "^7.34.0",
+        "react-hook-form-mui": "^5.1.0",
+        "yup": "^0.32.11"
     },
     "devDependencies": {
         "@appliedzkp/semaphore-contracts": "^0.8.0",
